tests/final/expect/15__diag__malformed_include_unterminated_no_crash.diag
Diagnostics:
Error: Unterminated string literal at tests/final/cases/15__diagjson__malformed_include_unterminated_no_crash.c:1:10 (got '"')
